Add functionalitly to the display box
Added to the code for the decimal button and the backspace button so that the decimals
being added or the numbers being taken away now show up on the display box as the user
is using the buttons in real time

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ body {
 #display-box {
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: white;
     width: 400px;
+    height: 25px;
 }
