--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,13 @@ body {
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     flex-direction: column;
+    margin-top: 150px;
 }
 
 .button-panel {
-    
+    justify-content: space-between;
     height: 500px;
     width: 400px;
 }
@@ -23,4 +24,16 @@ body {
     background-color: white;
     width: 400px;
     height: 25px;
+}
+
+button {
+    aspect-ratio: 3/4;
+    justify-content: space-between;
+}
+
+.row1, .row2, .row3, .row4 {
+    display: flex;
+    margin-left: 15px;
+    margin-right: 15px;
+    justify-content: space-between;
 }
