--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* style sheet for calculator */
 body {
-    background-color: blanchedalmond;
+    background-color: rgb(192, 180, 215);
 }
 
 .container {
@@ -8,30 +8,41 @@ body {
     justify-content: center;
     align-items: center; 
     flex-direction: column;
-    margin-top: 150px;
+    margin-top: 135px;
+   
 }
 
 .button-panel {
-    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 10px;
+    padding-bottom: 10px;
     height: 500px;
-    width: 400px;
+    width: 400px; 
+    border: 2px solid rgb(25, 66, 78);
 }
 
 #display-box {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: rgb(131, 130, 130);
     width: 400px;
-    height: 25px;
+    height: 60px;
+    border: 2px solid rgb(25, 66, 78)
 }
 
 button {
-    aspect-ratio: 3/4;
+    aspect-ratio: 1;
     justify-content: space-between;
+    padding: 35px;
+    width: 100%;
+    margin-left: 2px;
+    margin-right: 2px; 
 }
 
-.row1, .row2, .row3, .row4 {
+.row1, .row2, .row3, .row4, .row5 {
     display: flex;
     margin-left: 15px;
     margin-right: 15px;
