--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* style sheet for calculator */
 body {
     background-color: rgb(143, 201, 228);
-    background-image: url(background-pic);
+    /* background-image: url(background-pic); */
+    background-image: linear-gradient(60deg, rgba(119,0,255,1) 20%, rgba(0,212,255,1) 75%);
     display: flex;
     justify-content: center;
 }
